--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -22,8 +22,6 @@ filelock==3.15.4
     # via virtualenv
 identify==2.6.0
     # via pre-commit
-iniconfig==2.0.0
-    # via pytest
 isort==5.12.0
     # via
     #   -r requirements-dev.in
@@ -35,9 +33,7 @@ mypy-extensions==1.0.0
 nodeenv==1.9.1
     # via pre-commit
 packaging==24.1
-    # via
-    #   black
-    #   pytest
+    # via black
 pathspec==0.12.1
     # via black
 platformdirs==4.2.2
@@ -45,8 +41,6 @@ platformdirs==4.2.2
     #   black
     #   pylint
     #   virtualenv
-pluggy==1.5.0
-    # via pytest
 pre-commit==3.7.1
     # via -r requirements-dev.in
 pycodestyle==2.12.0
@@ -54,8 +48,6 @@ pycodestyle==2.12.0
 pydocstyle==6.3.0
     # via -r requirements-dev.in
 pylint==3.2.6
-    # via -r requirements-dev.in
-pytest==8.3.1
     # via -r requirements-dev.in
 pyyaml==6.0.1
     # via pre-commit
