--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-# We're using the main branch of gnomad_method on github rather than the pip version.
-git+https://github.com/broadinstitute/gnomad_methods@main
-hail
+faicons
+shiny
+shinywidgets
+seaborn
+pandas
